--- a/MyFit/MyFit/Base.lproj/Main.storyboard
+++ b/MyFit/MyFit/Base.lproj/Main.storyboard
@@ -22,7 +22,11 @@
                                 <animations/>
                                 <items>
                                     <navigationItem title="Running" id="Lkp-oZ-G3x">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="1Vn-eX-rPj"/>
+                                        <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="1Vn-eX-rPj">
+                                            <connections>
+                                                <action selector="Rest:" destination="BYZ-38-t0r" id="LU3-Ht-Sd5"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -30,12 +34,20 @@
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <animations/>
                                 <items>
-                                    <barButtonItem systemItem="add" id="dTH-dl-IJr"/>
+                                    <barButtonItem systemItem="play" id="dTH-dl-IJr">
+                                        <connections>
+                                            <action selector="Play:" destination="BYZ-38-t0r" id="QAk-gf-7vt"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="M6I-vW-sD1"/>
-                                    <barButtonItem systemItem="add" id="Ewp-LL-Wej"/>
+                                    <barButtonItem systemItem="pause" id="Ewp-LL-Wej">
+                                        <connections>
+                                            <action selector="Pause:" destination="BYZ-38-t0r" id="1iz-ak-m3f"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4v-VP-FdJ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4v-VP-FdJ">
                                 <rect key="frame" x="161" y="139" width="133" height="128"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
@@ -57,7 +69,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aOU-I6-jGZ">
-                                <rect key="frame" x="197" y="236" width="88" height="21"/>
+                                <rect key="frame" x="197" y="236" width="71" height="21"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -77,6 +89,18 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="puA-Tr-AQ0">
+                                <rect key="frame" x="109" y="323" width="103" height="56"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <state key="normal" title="Finish">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="Finish:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cuy-7V-rgA"/>
+                                    <action selector="Stop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pgA-79-kAC"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -90,6 +114,9 @@
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="Time" destination="B4v-VP-FdJ" id="qWF-Tw-nLz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
