--- a/MyFit/MyFit/Base.lproj/Main.storyboard
+++ b/MyFit/MyFit/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jY3-Ep-EFq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jY3-Ep-EFq">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -82,7 +82,7 @@
                                 <connections>
                                     <action selector="Finish:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cuy-7V-rgA"/>
                                     <action selector="Stop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pgA-79-kAC"/>
-                                    <segue destination="zWP-qW-SFE" kind="modal" id="zRe-gF-eYi"/>
+                                    <action selector="finishRun:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bCI-Jw-Iq5"/>
                                 </connections>
                             </button>
                             <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hZJ-kz-oBa">
@@ -126,6 +126,8 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
+                        <outlet property="Finish" destination="puA-Tr-AQ0" id="rOo-KE-HPf"/>
+                        <outlet property="FinishButton" destination="puA-Tr-AQ0" id="goB-8a-xTv"/>
                         <outlet property="Time" destination="B4v-VP-FdJ" id="qWF-Tw-nLz"/>
                     </connections>
                 </viewController>
@@ -154,10 +156,6 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="K2N-FG-1dW">
-                                <rect key="frame" x="0.0" y="248" width="320" height="148"/>
-                                <animations/>
-                            </mapView>
                             <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="seQ-1J-hDu">
                                 <rect key="frame" x="0.0" y="519" width="320" height="49"/>
                                 <animations/>
@@ -237,7 +235,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="modal" id="kZI-y0-yQy"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="tRd-ce-rcw"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Start Running" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lds-vF-Hpy">
