--- a/MyFit/MyFit/Base.lproj/Main.storyboard
+++ b/MyFit/MyFit/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jY3-Ep-EFq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jY3-Ep-EFq">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -85,16 +85,6 @@
                                     <action selector="finishRun:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bCI-Jw-Iq5"/>
                                 </connections>
                             </button>
-                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hZJ-kz-oBa">
-                                <rect key="frame" x="0.0" y="519" width="320" height="49"/>
-                                <animations/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <items>
-                                    <tabBarItem title="Home" id="Y07-b0-IuB"/>
-                                    <tabBarItem title="Calander" id="vGz-eR-BwR"/>
-                                    <tabBarItem title="BMI" id="7ax-mc-oIu"/>
-                                </items>
-                            </tabBar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EgS-qS-1st">
                                 <rect key="frame" x="0.0" y="452" width="320" height="44"/>
                                 <animations/>
@@ -112,6 +102,16 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hZJ-kz-oBa">
+                                <rect key="frame" x="0.0" y="519" width="320" height="49"/>
+                                <animations/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <items>
+                                    <tabBarItem title="Home" id="Y07-b0-IuB"/>
+                                    <tabBarItem title="Calander" id="vGz-eR-BwR"/>
+                                    <tabBarItem title="BMI" id="7ax-mc-oIu"/>
+                                </items>
+                            </tabBar>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
